--- a/backend/package.json
+++ b/backend/package.json
@@ -7,5 +7,8 @@
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2"
+    "firebase-admin": "^11.5.0",
+    "express": "^4.21.2",
+    "cors": "^2.8.5"
   }
 }
