--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,10 @@
-{
-  "dependencies": {
-    "bcryptjs": "^3.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "express-rate-limit": "^7.5.0",
-    "express-validator": "^7.2.1",
-    "jsonwebtoken": "^9.0.2",
-    "firebase-admin": "^11.5.0"
-  }
+"dependencies": {
+  "bcryptjs": "",
+  "cors": "",
+  "dotenv": "",
+  "express": "",
+  "express-rate-limit": "",
+  "express-validator": "",
+  "jsonwebtoken": "",
+  "firebase-admin": ""
 }
