--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,22 @@
-"dependencies": {
-  "bcryptjs": "^3.1.0",
-  "cors": "^2.8.5",
-  "dotenv": "^16.4.7",
-  "express": "^4.21.2",
-  "express-rate-limit": "^7.5.0",
-  "express-validator": "^7.2.1",
-  "jsonwebtoken": "^9.0.2",
-  "firebase-admin": "^11.5.0"
+{
+  "name": "cnproject",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "postinstall": "npm audit fix --force"
+  },
+  "dependencies": {
+    "bcryptjs": "^3.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "firebase-admin": "^11.5.0"
+  },
+  "engines": {
+    "node": "18.x"
+  }
 }
